--- a/package.json
+++ b/package.json
@@ -8,33 +8,41 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "argon2": "^0.27.0",
     "axios": "^0.20.0",
+    "csrf": "^3.1.0",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
+    "emotion-theming": "^10.0.27",
     "graphql": "^15.3.0",
+    "ley": "^0.6.0",
     "next": "9.5.5",
     "postgres": "^1.0.2",
     "react": "17.0.0",
-    "react-dom": "17.0.0"
+    "react-dom": "17.0.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.0",
     "@types/react": "16.9.51",
     "@types/react-dom": "16.9.8",
-    "@typescript-eslint/eslint-plugin": "4.2.0",
-    "@typescript-eslint/parser": "4.2.0",
-    "@upleveled/eslint-config-upleveled": "^1.0.7",
-    "babel-eslint": "10.1.0",
-    "eslint": "6.8.0",
-    "eslint-config-react-app": "5.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^4.0.0",
+    "@upleveled/eslint-config-upleveled": "1.1.2",
+    "babel-eslint": "^10.0.0",
+    "eslint": "^7.5.0",
+    "eslint-config-react-app": "6.0.0",
     "eslint-import-resolver-typescript": "2.3.0",
     "eslint-plugin-cypress": "2.11.2",
-    "eslint-plugin-flowtype": "4.7.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jest": "24.0.0",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.20.3",
-    "eslint-plugin-react-hooks": "4.0.8",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-testing-library": "^3.9.0",
     "typescript": "4.0.3"
   }
 }
