--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "es2020.bigint",
       "es2020.string"
     ],
+    "target": "ES2015",
+    "noFallthroughCasesInSwitch": true,
     "allowJs": true,
     "strict": true,
     "noEmit": true,
@@ -19,8 +21,7 @@
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "isolatedModules": true,
-    "target": "es5"
+    "isolatedModules": true
   },
   "include": [
     "next-env.d.ts",
