--- a/package.json
+++ b/package.json
@@ -5,26 +5,31 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "argon2": "^0.27.0",
     "axios": "^0.20.0",
+    "camelcase-keys": "^6.2.2",
+    "cookie": "^0.4.1",
     "csrf": "^3.1.0",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
     "emotion-theming": "^10.0.27",
     "graphql": "^15.3.0",
     "ley": "^0.6.0",
-    "next": "9.5.5",
+    "next": "10.0.0",
+    "next-cookies": "^2.0.3",
     "postgres": "^1.0.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.27",
     "@types/node": "^14.14.0",
     "@types/react": "16.9.51",
     "@types/react-dom": "16.9.8",
