--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "migrate": "dotenv ley"
+    "start": "next start -p ${PORT:-\"3000\"}",
+    "migrate": "dotenv ley",
+    "heroku-postbuild": "yarn migrate up && yarn build"
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
@@ -49,5 +50,8 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-testing-library": "^3.9.0",
     "typescript": "4.0.3"
-  }
+  },
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
