--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "geoquiz",
   "version": "0.1.0",
   "engines": {
-    "node": "14.9.0"
+    "node": "14.x"
   },
   "private": true,
   "scripts": {
