--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^10.0.27",
     "argon2": "^0.27.0",
     "camelcase-keys": "^6.2.2",
+    "cloudinary": "^1.23.0",
     "cookie": "^0.4.1",
     "csrf": "^3.1.0",
     "dotenv": "^8.2.0",
@@ -30,6 +31,7 @@
     "postgres": "^1.0.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-dom-confetti": "^0.2.0",
     "react-image-crop": "^8.6.6",
     "react-router-dom": "^5.2.0"
   },
