--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ley": "^0.6.0",
     "next": "10.0.0",
     "next-cookies": "^2.0.3",
+    "nodemailer": "^6.4.16",
     "postgres": "^1.0.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
