--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "@types/nodemailer": "^6.4.0",
     "argon2": "^0.27.0",
     "camelcase-keys": "^6.2.2",
     "cloudinary": "^1.23.0",
@@ -29,6 +30,7 @@
     "next": "10.0.0",
     "next-cookies": "^2.0.3",
     "nodemailer": "^6.4.16",
+    "nodemailer-mailgun-transport": "^2.0.1",
     "postgres": "^1.0.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
