--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/parser": "^4.0.0",
     "@upleveled/eslint-config-upleveled": "1.1.2",
     "babel-eslint": "^10.0.0",
+    "cypress": "^5.6.0",
     "eslint": "^7.5.0",
     "eslint-config-react-app": "6.0.0",
     "eslint-import-resolver-typescript": "2.3.0",
