--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@upleveled/eslint-config-upleveled": "1.1.2",
     "babel-eslint": "^10.0.0",
     "cypress": "^5.6.0",
+    "cypress-file-upload": "^4.1.1",
     "eslint": "^7.5.0",
     "eslint-config-react-app": "6.0.0",
     "eslint-import-resolver-typescript": "2.3.0",
