--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -29,7 +29,7 @@ jobs:
           PGUSERNAME: ${{ secrets.PGUSERNAME }}
           PGPASSWORD: ${{ secrets.PGPASSWORD }}
           CSRF_TOKEN_SECRET: ${{ secrets.CSRF_TOKEN_SECRET }}
-          MAILGUN_KEY: ${{ 'MAILGUN_CYPRESS_TEST_KEY' }}
+          MAILGUN_KEY: ${{ secrets.MAILGUN_KEY }}
           CLOUDINARY_KEY: ${{ secrets.CLOUDINARY_KEY }}
           CLOUDINARY_SECRET: ${{ secrets.CLOUDINARY_SECRET }}
           CLOUDINARY_URL: ${{ secrets.CLOUDINARY_URL }}
