--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "next-cookies": "^2.0.3",
     "nodemailer": "^6.4.16",
     "nodemailer-mailgun-transport": "^2.0.1",
-    "postgres": "^1.0.2",
+    "postgres": "2.0.0-beta.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-dom-confetti": "^0.2.0",
